--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
     "input-otp": "^1.2.4",
+    "jose": "^5.2.4",
     "lucide-react": "^0.373.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
